tests/ui/type-qpath-unexpected6.stderr
error: no rules expected the token `@`
 --> $DIR/type-qpath-unexpected6.rs:6:27
  |
6 |     input = [{ <T as F>:: @ }]
  |                           ^

error: aborting due to previous error

